--- a/app_documento/app/views/tramites/index.html.erb
+++ b/app_documento/app/views/tramites/index.html.erb
@@ -33,5 +33,12 @@
         <% end %>
       </tbody>
     </table>
+    <table style="min-width:250px">
+      <tr>
+        <td><div class="alerta" style="background: white;float:left"></div><div style="font-size:x-small">Stand-by </div></td>
+        <td><div class="alerta" style="background: green;float:left"></div><div style="font-size:x-small">Aceptado </div></td>
+        <td><div class="alerta" style="background: red;float:left">  </div><div style="font-size:x-small">Rechazado</div></td>
+      </tr>
+    </table>
   </div>
 </div>
