--- a/app_documento/app/assets/stylesheets/requisitos.css.scss
+++ b/app_documento/app/assets/stylesheets/requisitos.css.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Requisitos controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.area_show { 
+  margin-top:40px;
+  border: 1px solid #555;
+  border-spacing: 0;
+
+  input[type="submit"]{
+    padding: 4px;
+    margin-left: 0;
+    margin-bottom: 5px;
+    font-weight:bold;
+  }
+}
