--- a/app_documento/app/assets/stylesheets/tramites.css.scss
+++ b/app_documento/app/assets/stylesheets/tramites.css.scss
@@ -7,6 +7,16 @@ $list_even     : #5294AA;
 $list_hover    : #74B6CC;
 $list_selected : #396877; 
 
+
+.formtastic {
+    list-style:none;
+    padding:4px;
+    font-weight: bold;
+    input[type="submit"]{
+        padding:4px;
+    }
+}
+
 #new_tramite_table{
     margin:auto;
     margin-top: 50px;
@@ -74,8 +84,9 @@ $list_selected : #396877;
 }
 #producto_tramite_filter, #tipo_tramite_filter, #requisitos_show_filter{
   input[type="text"]{
-  background: url(find.png) no-repeat scroll 3px 3px;
-  height: 20px;
+    background: url(find.png) no-repeat scroll 3px 3px;
+    height: 20px;
+    padding-left: 20px;
   }
 }
 
