--- a/app_documento/app/views/tramites/_form.html.erb
+++ b/app_documento/app/views/tramites/_form.html.erb
@@ -1,4 +1,16 @@
 <table id="new_tramite_table" class="area_show">
+  <thead>
+        <tr style="background:#133a6b;color:white">
+          <td colspan="2">
+            
+              <h1 style="margin-left:20px">
+                Nueva Solicitud
+              </h1>
+            
+          </td>
+        </tr>
+
+      </thead>
   <tr>
     <td>
       <table>
@@ -65,13 +77,17 @@
       <%= semantic_form_for @tramite do |f| %>
         <%= f.input :producto_id, :as => :hidden, :input_html => {:id => "input_producto_tramite"}%>
         <%= f.input :TipoDocumento_id, :as => :hidden, :input_html => { :id => "input_tipodoc_tramite" }%>
-      <center>
-        <%= f.submit :value => "Enviar solicitud", :id => "crear_solicitud" %>
-        <button>
-          <%= link_to 'Volver', :back %>
-        </button>
+      
+        <center style='font-size:x-small'>*Si desea realizar una solicitud para un producto que no esté en sistema, seleccione [Nuevo producto]</center>
+
+        <div style="margin-left:257px;margin-top:9px">
+          <%= f.submit :value => "Enviar solicitud", :id => "crear_solicitud" %>
+        
+          <button style="margin-left:4px">
+            <%= link_to 'Volver', :back %>
+          </button>
+        </div>
       <% end %>
-      </center>
     </td>
   </tr>
 </table>
