--- a/app_documento/app/assets/stylesheets/inicio.css.scss
+++ b/app_documento/app/assets/stylesheets/inicio.css.scss
@@ -5,136 +5,136 @@
 $border_color     : #555;
 
 p {
-  text-align: justify;
-  margin-left: 20px;
-  width: 90%;
+    text-align: justify;
+    margin-left: 20px;
+    width: 90%;
 }
 
 #division {
-  width: 100%;
-  height: 100%;
-  border: 0;
-  margin: 0;
-  border-spacing: 0;
-  margin-top: -12px;
-
-  tr {
     width: 100%;
     height: 100%;
     border: 0;
+    margin: 0;
+    border-spacing: 0;
+    margin-top: -12px;
 
-    td {
-      width: 50%;
-      height: 100%;
-      border: 0;
-      padding: 30px;
-
-      .saber {
-        color: #029 !important;
-        font-size: 15px;
-      }
-
-      form {
-        margin: auto;
-        width: 250px;
-        padding: 20px;
-        border: 3px $border_color solid;
-        border-radius: 5px;
-        background-color: #eee;
+    tr {
+        width: 100%;
+        height: 100%;
+        border: 0;
 
         td {
-          padding: 5px;
-        }
+            width: 50%;
+            height: 100%;
+            border: 0;
+            padding: 30px;
 
-        h2 {
-          margin: 5px;
-          margin-bottom: 10px;
+            .saber {
+                color: #029 !important;
+                font-size: 15px;
+            }
+
+            form {
+                margin: auto;
+                width: 250px;
+                padding: 20px;
+                border: 3px $border_color solid;
+                border-radius: 5px;
+                background-color: #eee;
+
+                td {
+                    padding: 5px;
+                }
+
+                h2 {
+                    margin: 5px;
+                    margin-bottom: 10px;
+                }
+            }
         }
-      }
     }
-  }
 }
 
 #tablas_inicio {
-  width: 800px;
-  height: 100%;
-  margin: 0;
-  border-spacing: 20px;
-  margin-top: 40px;
-
-  tr {
-    width: 100%;
+    width: 800px;
     height: 100%;
+    margin: 0;
+    border-spacing: 20px;
+    margin-top: 40px;
 
-    td{
-      width: 50%;
-      height: 100%;
-      padding: 5px;
+    tr {
+        width: 100%;
+        height: 100%;
+
+        td{
+            width: 50%;
+            height: 100%;
+            padding: 5px;
 
 
-      table {
-        border: 0;
+            table {
+                border: 0;
 
-        tbody {
-          td{
+                tbody {
+                    td{
 
-      /*Puntos suspensivos*/
-      white-space: nowrap;
-      overflow: hidden;
-      -o-text-overflow: ellipsis;
-      -ms-text-overflow: ellipsis;
-          }
-          tr:nth-child(even) {
-            background-color: #5294aa;
+                        /*Puntos suspensivos*/
+                        white-space: nowrap;
+                        overflow: hidden;
+                        -o-text-overflow: ellipsis;
+                        -ms-text-overflow: ellipsis;
+                    }
+                    tr:nth-child(even) {
+                        background-color: #5294aa;
 
-            td.sorting_1, td.sorting_2, td.sorting_3 {
-              background-color: transparent;
+                        td.sorting_1, td.sorting_2, td.sorting_3 {
+                            background-color: transparent;
+                        }
+                    }
+
+                    tr:nth-child(odd) {
+                        background-color: #fff;
+
+                        td.sorting_1, td.sorting_2, td.sorting_3 {
+                            background-color: transparent;
+                        }
+                    }
+
+                    td {
+                        text-align: left;
+                        min-width: 70px;
+                        max-width: 70px;
+
+                    }
+
+                    tr:hover {
+                        background-color: #74b6cc;
+                    }
+
+                    .estados{
+                        margin-bottom: 25px;
+                    }
+                }
             }
-          }
-
-          tr:nth-child(odd) {
-            background-color: #fff;
-
-            td.sorting_1, td.sorting_2, td.sorting_3 {
-              background-color: transparent;
-            }
-          }
-
-          td {
-            text-align: center;
-            min-width: 70px;
-            max-width: 70px;
-          }
-
-          tr:hover {
-            background-color: #74b6cc;
-          }
-
-          .estado {
-            margin: 5px 20px 0 20px !important;
-            cursor: default;
-          }
         }
-      }
     }
-  }
 }
 
 .dataTables_filter {
-  float: right;
-  input[type="text"] {
-    border-radius: 5px;
-    width: 360px;
-  }
+    float: right;
+    input[type="text"] {
+        border-radius: 5px;
+        width: 360px;
+    }
 }
 
 .dataTables_wrapper {
-  height: 300px;
+    height: 300px;
 }
 
 .titulos_inicio {
-  font-size: 20px;
-  font-family: arial;
-  font-weight: bold;
-  font-style: italic;
+    font-size: 20px;
+    font-family: arial;
+    font-weight: bold;
+    font-style: italic;
 }
