--- a/app_documento/app/assets/stylesheets/tramites.css.scss
+++ b/app_documento/app/assets/stylesheets/tramites.css.scss
@@ -82,12 +82,21 @@ $list_selected : #396877;
         background-color: #DCEAEE;
     }
 }
-#producto_tramite_filter, #tipo_tramite_filter, #requisitos_show_filter{
+#producto_tramite_filter, #tipo_tramite_filter, #requisitos_show_filter, #solicitud_tramite_filtro_filter{
   input[type="text"]{
     background: url(find.png) no-repeat scroll 3px 3px;
     height: 20px;
     padding-left: 20px;
   }
+}
+
+#solicitud_tramite_filtro_filter {
+    label{
+    }
+  input[type="text"]{
+        width: 616px;
+  }
+    
 }
 
 #requisitos_show_filter{
