--- a/app_documento/app/views/tramites/index.html.erb
+++ b/app_documento/app/views/tramites/index.html.erb
@@ -1,7 +1,9 @@
-<h1><%= flash[:title] %></h1>
+<h1 style="margin-left:20px"><%= flash[:title] %></h1>
 
 <% if current_usuario.admin == 0 %>
+  <div style="margin-left:20px">
   <%= button_to 'Nueva solicitud', new_tramite_path, :method => :get %>
+</div>
 <% end %>
   <div class="filtro_wrapper" id="solicitud_tramite_wrapper">
     <table id="solicitud_tramite_filtro">
